# nodes

./: .gitignore  CHANGELOG.md  Makefile.am  README.md  configure.ac
api/: blocking.h  dependencies.h  final.h  library-mode.h  loop.h  nanos6.h  nodes.h  user-mutex.h
api/nanos6/: blocking.h  bootstrap.h  constants.h  debug.h  dependencies.h  events.h  final.h  library-mode.h  loop.h  major.h  reductions.h  task-info-registration.h  task-instantiation.h  taskwait.h  user-mutex.h
api/nodes/: blocking.h  bootstrap.h  constants.h  coroutines.hpp  debug.h  dependencies.h  events.h  final.h  library-mode.h  loop.h  major.h  reductions.h  task-info-registration.h  task-instantiation.h  taskwait.h  user-mutex.h  version.h
m4/: ax_boost_base.m4  ax_cxx_compile_stdcxx_20.m4  clang.m4  flags.m4  jemalloc.m4  main_intercept.m4  mercurium.m4  nosv.m4  ovni.m4  pthread.m4
scripts/: common.sh  generate_multidim_functions_for_linear_regions.sh  generate_regions_prototypes.sh  generate_release_prototypes.sh
src/bootstrap/: Initialization.cpp  intercept-main-common.c  intercept-main-common.h  intercept-main-glibc-powerpc.c  intercept-main-glibc.c  main-wrapper.c  main-wrapper.h
src/common/: AtomicBitset.hpp  Chrono.hpp  Containers.hpp  EnvironmentVariable.hpp  ErrorHandler.cpp  ErrorHandler.hpp  MathSupport.hpp  PaddedSpinLock.hpp  PaddedTicketSpinLock.hpp  Padding.hpp  SpinLock.cpp  SpinLock.hpp  SpinWait.hpp  StringSupport.hpp  TicketSpinLock.hpp  UserMutex.hpp
src/dependencies/: DataAccessBase.hpp  DataAccessRegion.hpp  DataAccessType.hpp  DataTrackingSupport.cpp  DataTrackingSupport.hpp  MultidimensionalAPITraversal.hpp  SymbolTranslation.hpp
src/dependencies/discrete/: BottomMapEntry.hpp  CPUDependencyData.cpp  CPUDependencyData.hpp  CommutativeSemaphore.cpp  CommutativeSemaphore.hpp  DataAccess.cpp  DataAccess.hpp  DataAccessFlags.hpp  DataAccessRegistration.cpp  DataAccessRegistration.hpp  DataAccessRegistrationImplementation.hpp  DependencySystem.hpp  DeviceReductionStorage.hpp  MultidimensionalAPI.hpp  ReductionInfo.cpp  ReductionInfo.hpp  ReductionSpecific.hpp  RegisterDependencies.cpp  ReleaseDirective.cpp  TaskDataAccesses.hpp  TaskDataAccessesInfo.hpp  TaskiterReductionInfo.hpp
src/dependencies/discrete/devices/: HostReductionStorage.cpp  HostReductionStorage.hpp
src/dependencies/discrete/taskiter/: TaskGroupMetadata.cpp  TaskGroupMetadata.hpp  TaskiterGraph.cpp  TaskiterGraph.hpp  TaskiterNode.hpp
src/hardware/: HardwareInfo.cpp  HardwareInfo.hpp
src/instrument/: OVNIInstrumentation.hpp
src/main/: intercept-main-common.h  main-wrapper.h
src/memory/: MemoryAllocator.hpp  ObjectAllocator.hpp
src/system/: Bootstrap.cpp  CoAwaitables.cpp  DebugAPI.cpp  EventsAPI.cpp  SpawnFunction.cpp  SpawnFunction.hpp  TaskBlocking.cpp  TaskCoroutine.cpp  TaskCreation.cpp  TaskCreation.hpp  TaskFinalization.cpp  TaskFinalization.hpp  TaskWait.cpp  VersionAPI.cpp
src/tasks/: Task.cpp  TaskInfo.cpp  TaskInfo.hpp  TaskInfoAPI.cpp  TaskMetadata.cpp  TaskMetadata.hpp  TaskiterChildLoopMetadata.hpp  TaskiterChildMetadata.hpp  TaskiterMetadata.cpp  TaskiterMetadata.hpp  TaskloopMetadata.cpp  TaskloopMetadata.hpp
tests/: Makefile.am
tests/common/: Atomic.hpp  Functors.hpp  TAPDriver.hpp  Timer.hpp
tests/correctness/blocking/: blocking.cpp
tests/correctness/commutative/: commutative.cpp
tests/correctness/coroutine/: critical_awaitable.cpp  deadline_awaitable.cpp  fibonacci_coroutine.cpp  suspend.cpp
tests/correctness/critical/: critical.cpp
tests/correctness/deadline/: deadline.cpp
tests/correctness/dependencies/: discrete-deps-early-release.cpp  discrete-deps-er-and-weak.cpp  discrete-deps-nonest.cpp  discrete-deps-release.cpp  discrete-deps-wait.cpp  discrete-deps.cpp  if0.cpp
tests/correctness/events/: events-dep.cpp  events.cpp
tests/correctness/fibonacci/: fibonacci.cpp
tests/correctness/reductions/: red-firstprivate.cpp  red-nest-other.cpp  red-nest.cpp  red-nonest.cpp  red-nqueens.cpp  red-stress.cpp
tests/correctness/taskiter/: taskiter-for.cpp  taskiter-unroll.cpp  taskiter-while.cpp
tests/correctness/taskloop/: taskloop-dep-multiaxpy.cpp  taskloop-multiaxpy.cpp  taskloop-nested-dep-multiaxpy.cpp  taskloop-nonpod.cpp  taskloop-nqueens.cpp
